Fix overlap on scatterplot.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1238,6 +1238,17 @@ td.listcard-link > a {
 .card__title--link {
   font-size: 20px;
   margin-right: 15px;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+@media (min-width: 550px) {
+  .card__title--link {
+    font-size: 1.6rem;
+    line-height: 1.5;
+    margin-bottom: 0;
+    font-weight: bold;
+  }
 }
 
 .card__category {
